2006-03-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* CVS->SVN repository conversion.

2006-03-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_nd_test.cpp: Fixed minor bug with namespace and
	cerr (merged from itpp-3-10-branch). 

	* itpp/protocol/selective_repeat.cpp: Fixed improper logical check
	in the `it_assert' macro (merged from itpp-3-10-branch).

	* itpp/base/scalfunc.h: Added `#include <limits>', which solves
	compilation problems using MSVC++ .NET 2005 (merged from
	itpp-3-10-branch).

	* AUTHORS: Updated to reflect recent staff changes (merged from
	itpp-3-10-branch).

	* Created CVS branch `itpp-3-10-branch' for bug-fixes in this
	release. 

==============================================================================

2006-03-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.0 released (CVS tag: release-3-10-0)

	* configure.ac: Cosmetic changes in CXXFLAGS settings.

	* doc/doxygen_html.cfg.in, itpp/base/binary.h,
	itpp/base/binfile.cpp, itpp/base/converters.cpp,
	itpp/base/converters.h, itpp/base/mat.cpp, itpp/base/mat.h,
	itpp/base/parser.cpp, itpp/base/sigfun.h, itpp/base/vec.cpp,
	itpp/base/vec.h, itpp/comm/llr.cpp, itpp/comm/llr.h,
	itpp/comm/modulator_nd.h, itpp/comm/rec_syst_conv_code.cpp,
	itpp/comm/rec_syst_conv_code.h, itpp/srccode/audiofile.cpp:
	Minor fixes related to Doxygen warnings.

	* itpp/itconfig.h, itpp/base/newton_search.h, itpp/base/poly.h:
	Documentation fixes related to Doxygen groups (modules).

2006-03-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc: Added installation instructions for
	MacOS X users based on the discussion from the Help forum:
	"3.9.1 on MacOS X doesn't compile".

2006-03-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/Makefile.am, doc/images/Makefile.am,
	doc/images/itpp_logo.png, doc/images/newcom_logo.png,
	doc/local/itpp_header.html: Added Newcom project logo to the IT++
	home pages.
	